durga@48demo.com.bleadtest/src/objects/User_Profile_Event__c.object
<CustomObject>
    <fields>
        <fullName>BLP_id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BL Pricing</label>
        <referenceTo>BL_Pricing__c</referenceTo>
        <relationshipLabel>User_Profile_Event</relationshipLabel>
        <relationshipName>User_Profile_Event</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BT_id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Booth</label>
        <referenceTo>Booth__c</referenceTo>
        <relationshipLabel>User_Profile_Event</relationshipLabel>
        <relationshipName>User_Profile_Event</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BoothAdmin_id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BoothAdmin</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Profile_Event1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EV_id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipLabel>User_Profile_Event</relationshipLabel>
        <relationshipName>User_Profile_Event</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventAdmin_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EventAdmin</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Profile_Event2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsBoothPersonnel__c</fullName>
        <defaultValue>true</defaultValue>
        <label>IsBoothPersonnel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Profile_id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Profile</label>
        <referenceTo>Profile__c</referenceTo>
        <relationshipLabel>User_Profile_Event</relationshipLabel>
        <relationshipName>User_Profile_Event</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>InActive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile only access</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile and Portal Access</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UEP_isActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Profile_Event</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>isFirstBoothAdmin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isFirstBoothAdmin</label>
        <type>Checkbox</type>
    </fields>
    <label>User_Profile_Event</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>User_id__c</columns>
        <columns>BoothAdmin_id__c</columns>
        <columns>BT_id__c</columns>
        <columns>EV_id__c</columns>
        <columns>EventAdmin_Id__c</columns>
        <columns>UEP_isActive__c</columns>
        <columns>IsBoothPersonnel__c</columns>
        <columns>Status__c</columns>
        <columns>Profile_id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>UPE_{00000000}</displayFormat>
        <label>UPE_id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User_Profile_Event</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>